[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webchecks"
version = "0.1.1"
description = " WebChecks is a BSD-licensed web search and research tool in Python traversing a given set of domains. "
readme = "README.md"
authors = [{ name = "CopperEagle" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["websearch", "analysis", "automation", "web"]
dependencies = [
    "beautifulsoup4==4.12.2",
	"bs4==0.0.1",
	"python-dotenv==1.0.0",
	"requests==2.31.0",
	"selenium==4.12.0",
	"selenium-wire==5.1.0",
	"typing_extensions==4.7.1",
	"urllib3==2.0.7",
	"webdriver-manager==4.0.0",
]
requires-python = ">=3.9"


[project.urls]
Homepage = "https://github.com/CopperEagle/WebChecks"
